# FFScrapper

./: .gitignore  FFapi.py  kainodaros_lentele.xls  likuciai.xlsx  likuciai_test.xlsx  likuciai_test.xlsx.xlsx  main.py  products-copy.xls  products_from_ff.csv  pyproject.toml  rezultatai.xlsx  rezultatai_dydziai.xlsx  rezultatai_test.xlsx  rezultatai_test.xlsx.xlsx  scrapper.py  stores.py  xls_generator.py
adhoc/debug/: .xlsx  log.txt  results.json  tmp.txt  total_pages.json  total_products_False.json  total_products_True.json
analize/: ff_produktu_lentele.csv  parduotuviu_lentele.xls  produktu_lentele.xls  pvz_rezultatas.xlsx  pvz_rezultatas_likuciai.xlsx  stores.json
ffscrapper/: data_loader.py  ui_options.py
lenteles/: FF kainodara.xls  Parduotuvių lentelė.xls  Produktų lentelė.xls  likuciai.xlsx  rezultatai.xlsx
lenteles/naujos/: FF KAINOS ELEVENTY.xls  FF PREKES ELEVENTY.xls  PREKES ELEVENTY.xls  REZ 1 ELEVENTY.xlsx  parduotuviu_lentele 1.xls  rez.xls.xlsx  rez.xlsx  rez2.xls.xlsx
lenteles/rezultatai/: rez.xlsx  rez2.xlsx
src/: .gitignore
src/main/python/: FFapi.py  MyApplication.spec  log.txt  main.py  main.spec  old  product.html  product_page.py  product_page_data.json  regex.py  response.html  results.json  rezultatai.xlsx  scrapper.py  stores.json  stores.py  stores_t.json  test.py  total_pages.json  xls_generator.py
src/main/python/lenteles/: .~lock.parduotuviu_lentele.xls#  .~lock.rez.xls.xlsx#  .~lock.rez.xlsx#  .~lock.rez2.xls.xlsx#  FF kainodaros lentele.xls  FF likuciu_lentele.xls  FF produktų lentelė.xls  FF_kainodaros_lentele.xls  (+14 more)
